fixed dark mode blur effect

--- a/src/assets/output.css
+++ b/src/assets/output.css
@@ -590,6 +590,14 @@ video {
   top: 1.25rem;
 }
 
+.z-0 {
+  z-index: 0;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
 .mb-7 {
   margin-bottom: 1.75rem;
 }
@@ -751,6 +759,16 @@ video {
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#ffffff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .fill-\[\#ffffff\] {
   fill: #ffffff;
 }
@@ -822,6 +840,22 @@ video {
 
 .opacity-100 {
   opacity: 1;
+}
+
+.opacity-90 {
+  opacity: 0.9;
+}
+
+.opacity-10 {
+  opacity: 0.1;
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-20 {
+  opacity: 0.2;
 }
 
 .mix-blend-multiply {
